# sfml-starter

./: CMakeLists.txt
src/: main.cpp
